<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.miniGame.kings.KingsActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/tepich"/>

    <RelativeLayout
        android:id="@+id/cardPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/popupPanel">

        <com.tomade.saufomat.view.CardImageView
            android:id="@+id/cardImage"
            android:layout_width="110dp"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/cardcounterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/popupPanel"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/popupImage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/popup"/>

        <TextView
            android:id="@+id/popupText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Tippen um die Karte aufzudecken"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"/>

        <ImageButton
            android:id="@+id/tutorialButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:scaleType="fitXY"
            android:src="@drawable/help"
            android:contentDescription="TutorialButton"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonPanel"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="false"
            android:background="#00ffffff"
            android:contentDescription="Zurückbutton"
            android:scaleType="center"
            android:src="@drawable/no_button"/>

        <TextView
            android:id="@+id/backText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignBottom="@+id/backButton"
            android:layout_alignLeft="@+id/backButton"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignRight="@+id/backButton"
            android:layout_alignTop="@+id/backButton"
            android:gravity="center"
            android:text="@string/button.back"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"/>
    </RelativeLayout>
</RelativeLayout>
