...
        android:layout_marginEnd="40dp"
        android:layout_marginTop="11dp"
        android:scaleType="center"
        android:src="@drawable/bussfahren_between_button"/>

    <ImageButton
        android:id="@+id/btnNewPlayer"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:scaleType="center"
        android:src="@drawable/busfahren_higher_button"
        android:layout_alignTop="@+id/btnBack"
        android:layout_centerHorizontal="true"/>
...
